load("//bazel:flags.bzl", "CPP_FLAGS", "MAPLIBRE_FLAGS")

cc_library(
    name = "render-test-lib",
    hdrs = [
        "include/mbgl/render_test.hpp",
    ],
    includes = [
        "include",
    ],
    visibility = [
        "//platform/default:__pkg__",
        "//render-test/ios:__pkg__",
    ],
)

# TODO: refactor
cc_library(
    name = "render-test-ios-srcs",
    srcs = glob(
        [
            "*.cpp",
            "*.hpp",
        ],
    ) + [
        "include/mbgl/render_test.hpp",
    ],
    copts = CPP_FLAGS + MAPLIBRE_FLAGS,
    includes = [
        "include",
    ],
    visibility = [
        "//render-test/ios:__pkg__",
    ],
    deps = [
        "//expression-test:test_runner_common",
        "//platform/ios:sdk",
    ],
)

cc_test(
    name = "render-test",
    srcs = glob(
        [
            "*.cpp",
            "*.hpp",
        ],
    ) + [
        "include/mbgl/render_test.hpp",
    ],
    args = [
        "--manifestPath",
        "metrics/linux-gcc8-release-style.json",
    ],
    copts = CPP_FLAGS + MAPLIBRE_FLAGS,
    data = [
        "//metrics:render-test-files",
    ],
    includes = [
        "include",
    ],
    deps = [
        "//expression-test:test_runner_common",
        "//platform/default:render-test-bin",
        "//platform/linux:impl",
        "//vendor:mapbox-base",
    ],
)
