load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_static_library")

genrule(
    name = "cpp_bindings",
    srcs = [
        "src/color.rs",
    ],
    outs = [
        "cpp/include/rustutils/color.hpp",
        "cpp/src/color.rs.cpp"
    ],
    cmd = "./$(location generate.sh) $(@D) $(SRCS)",
    tools = [
        ":generate.sh",
    ],
)

rust_static_library(
    name = "rustutils",
    srcs = [
        "src/lib.rs",
        "src/color.rs"
    ],
    crate_name = "rustutils",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:csscolorparser",
        "@crates//:cxx",
    ],
)

cc_library(
    name = "rustutilslib",
    srcs = [
        ":cpp_bindings"
    ],
    includes = [
        "cpp/include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":rustutils",
    ],
)
