load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_static_library")
load("//bazel:rust_cxx_bridge.bzl", "rust_cxx_bridge")

crate = use_extension("@rules_rust//crate_universe:docs_bzlmod.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")

#
#rust_static_library(
#    name = "rustutils",
#    srcs = glob(["src/**/*.rs"]),
#    edition = "2021",
#    deps = [
#        ":bridge",
#    ],
#)
#
#rust_cxx_bridge(
#    name = "bridge",
#    src = "src/lib.rs",
#)
