load("//bazel:flags.bzl", "CPP_FLAGS", "MAPLIBRE_FLAGS")

cc_library(
    name = "testutils",
    hdrs = [
        "include/mbgl/test/util.hpp",
    ],
    strip_include_prefix = "include",
    deps = [
        "//vendor/googletest:gtest",
    ],
)

cc_library(
    name = "testlib",
    srcs = glob(
        [
            "src/mbgl/test/*.cpp",
        ],
        exclude = [
            "src/mbgl/test/test.cpp",
            "src/mbgl/test/http_server.cpp",
        ],
    ),
    hdrs = glob([
        "src/mbgl/test/*.hpp",
    ]),
    copts = CPP_FLAGS + MAPLIBRE_FLAGS,
    strip_include_prefix = "src",
    deps = [
        "testutils",
        "//:mbgl-core",
    ],
)

cc_test(
    name = "core",
    srcs = glob(
        [
            "**/*.test.cpp",
        ],
    ),
    args = [
        "--gtest_filter=-Map.StyleNetworkErrorRetry:Map.StyleNotFound:MainResourceLoader.CachedResourceLowPriority",
    ],
    copts = CPP_FLAGS + MAPLIBRE_FLAGS,
    data = glob(["fixtures/**/*"]) + [
        "//:scripts/style-spec-reference/v8.json",
    ],
    deps = [
        "testlib",
        "testutils",
        "//:mbgl-core",
        "//platform/linux:impl",
        "//vendor/googletest:gtest_main",
    ],
)
